2007-08-17  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Major refactoring.  Added support for
	browsing long lists and sorting.

2007-08-16  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (FieldSpec): Pass the 'minlen'
	argument to data type.

	* pytis/form/inputfield.py (PasswordField): New class.

	* pytis/data/_test.py: New tests for type 'Password' and 'minlen'.

	* pytis/data/types_.py (Limited): Added support for 'minlen' limit.
	(Password): Added support for md5 passwords.
	(TreeOrder): New type.

2007-08-13  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/search.py: Don't allow aggregation functions on
	non-numeric data types.

2007-08-10  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py: Respect the changes in 'Configuration'
	class interface.

	* pytis/form/configui.py: Respect the changes in 'Configuration'
	class interface.

	* pytis/util/configuration.py: Respect the order of configuration
	option definitions.  Allow direct access to option instances.
	(description, documentation, type, changed): Methods removed.

	* pytis/presentation/spec.py (FieldSpec.__init__): Added `unique'
	to the list of allowed data type kwargs.

2007-08-07  Tomas Cerha  <cerha@brailcom.org>

	* pytis/util/configuration.py: Allow separate access to each
	option's description and documentation strings.
	
	* pytis/form/configui.py: Respect the above change.

	* pytis/web/form.py: Display a color sample for 'Color' fields.


2007-08-04  Milan Zamazal  <pdm@brailcom.org>

	* pytis/form/output.py (PrintFormExternal.run): Run the formatter
	twice.

2007-08-01  Pavel Hanak  <hanak@alfik.akont.xx>

	* pytis/form/output.py (PrintFormExternal._run_viewer):
	Transform params from config option into list of arguments.

2007-07-13  Tomas Cerha  <cerha@brailcom.org>

	* pytis/util/configuration.py: `Option' subclasses made public.
	Pretty print default values in config file dump.

2007-07-10  Tomas Cerha  <cerha@brailcom.org>
